name:           opaleye-of-the-stream-beneath-the-hills
version:        0.1
synopsis:       Boilerplate for Opaleye, making use of anonymous-types' records
license:        MPL-2.0
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Type
cabal-version:  >= 1.6
build-type:     Simple
homepage:       https://github.com/duairc/opaleye-of-the-stream-beneath-the-hills
bug-reports:    https://github.com/duairc/opaleye-of-the-stream-beneath-the-hills/issues

extra-source-files:
  LICENSE

library
  hs-source-dirs:
    src

  exposed-modules:
    Opaleye.StreamBeneathTheHills

  build-depends:
    aeson,
    anonymous-types >= 0.1 && < 0.2,
    anonymous-types-product-profunctors >= 0.1 && < 0.2,
    base >= 4.9 && < 5,
    bytestring,
    case-insensitive,
    contravariant,
    opaleye >= 0.4 && < 0.5,
    postgresql-simple,
    product-profunctors >= 0.5 && < 0.8,
    profunctors >= 3.1.1 && < 6,
    tagged,
    transformers,
    text,
    time,
    uuid

  if impl(ghc < 7.10)
    build-depends: transformers > 0.2 && < 0.6

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/duairc/opaleye-of-the-stream-beneath-the-hills.git
