name:           opaleye-of-the-stream-beneath-the-hills
version:        0.1
synopsis:       Boilerplate for Opaleye, making use of anonymous-data's records
license:        MPL-2.0
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Type
cabal-version:  >= 1.6
build-type:     Simple
homepage:       https://github.com/duairc/opaleye-of-the-stream-beneath-the-hills
bug-reports:    https://github.com/duairc/opaleye-of-the-stream-beneath-the-hills/issues

extra-source-files:
  LICENSE

library
  hs-source-dirs:
    src

  include-dirs:
    include

  exposed-modules:
    Opaleye.StreamBeneathTheHills

  build-depends:
    aeson >= 0.1 && < 1.2,
    anonymous-data >= 0.1 && < 0.2,
    anonymous-data-product-profunctors >= 0.1 && < 0.2,
    base >= 4.5 && < 5,
    bytestring >= 0.10 && < 0.11,
    case-insensitive >= 0.1 && < 1.3,
    contravariant >= 0.1 && < 2,
    opaleye >= 0.4 && < 0.6,
    opaleye-trans >= 0.3 && < 0.4,
    product-profunctors >= 0.5 && < 0.8,
    profunctors >= 3.1.1 && < 6,
    tagged >= 0.0 && < 1,
    text >= 0.1 && < 2,
    time >= 1 && < 2,
    types >= 0.1 && < 0.2,
    uuid-types >= 1 && < 2

  if impl(ghc < 7.10)
    build-depends: transformers > 0.2 && < 0.6

  if impl(ghc >= 7.6)
    cpp-options: -DDataPolyKinds

  if impl(ghc >= 7.8)
    cpp-options: -DClosedTypeFamilies

  if impl(ghc >= 7.2)
    cpp-options: -DSafeHaskell

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/duairc/opaleye-of-the-stream-beneath-the-hills.git
