name:           opaleye-x
version:        0.1
synopsis:       Boilerplate for Opaleye, making use of anonymous-data's records
license:        MPL-2.0
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Type
cabal-version:  >= 1.6
build-type:     Simple
homepage:       https://github.com/duairc/opaleye-x
bug-reports:    https://github.com/duairc/opaleye-x/issues

extra-source-files:
  LICENSE

library
  hs-source-dirs:
    src

  include-dirs:
    include

  exposed-modules:
    Opaleye.X
    Opaleye.X.Aggregate
    Opaleye.X.Array
    Opaleye.X.Cast
    Opaleye.X.Internal
    Opaleye.X.Join
    Opaleye.X.Maybe
    Opaleye.X.Optional
    Opaleye.X.Order
    Opaleye.X.Table
    Opaleye.X.TF
    Opaleye.X.Transaction

  build-depends:
    aeson >= 0.1 && < 1.4,
    anonymous-data >= 0.1 && < 0.2,
    anonymous-data-product-profunctors >= 0.1 && < 0.2,
    base >= 4.7 && < 5,
    bytestring >= 0.10 && < 0.11,
    case-insensitive >= 0.1 && < 1.3,
    contravariant >= 1.2 && < 2,
    layers >= 1.0.0 && < 2,
    opaleye >= 0.5 && < 0.7,
    postgresql-simple >= 0.0 && < 0.6,
    product-profunctors >= 0.7.1.0 && < 0.9,
    profunctors >= 3.1.1 && < 6,
    tagged >= 0.0 && < 1,
    text >= 0.1 && < 2,
    transformers >= 0.2 && < 0.6,
    time >= 1 && < 2,
    types >= 0.1 && < 0.2,
    uuid >= 1 && < 2

  if impl(ghc < 7.10)
    build-depends: transformers >= 0.4 && < 0.6

  if impl(ghc < 8)
    build-depends: semigroups >= 0.1

  if impl(ghc >= 7.6)
    cpp-options: -DDataPolyKinds

  if impl(ghc >= 7.8)
    cpp-options: -DClosedTypeFamilies

  if impl(ghc >= 7.2)
    cpp-options: -DSafeHaskell

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/duairc/opaleye-x.git
